# ctwarrick-dev

./: .gitignore  AGENTS.md  README.md  app.py  content.py  freeze.py  main.py  posts.py  pyproject.toml  staticwebapp.config.json
.claude/: settings.json
.claude/agents/: implementer.md  planner.md  releaser.md  retrospective.md  reviewer.md  scout.md  test-writer.md
.claude/hooks/: context_monitor.py
.github/workflows/: deploy.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
agents/: implementer.md  orchestrator.md  planner.md  releaser.md  retrospective.md  reviewer.md  scout.md  test-writer.md
design_handoff_flask/: README.md  app.py  content.py  startup.txt
design_handoff_flask/_design_reference/: 404.html  About.jsx  Article.jsx  Chrome.jsx  Data.jsx  Home.jsx  Icons.jsx  NotFound.jsx  Projects.jsx  README.md  Service.jsx  Site.jsx  (+4 more)
infra/: dns.bicep  main.bicep  main.bicepparam  static-web-app.bicep
posts/: a-scrum-master-is-not-a-ceremony-facilitator.md  at-3am-you-fall-to-the-level-of-your-telemetry.md  automate-the-paperwork-away.md  hello-world.md  stop-the-story-point-voodoo.md
scripts/: validate-infra.sh
templates/: 404.html  _macros.html  about.html  article.html  base.html  building.html  home.html  service.html  work.html  writing.html
tests/: conftest.py  test_attack_surface.py  test_freeze.py  test_links.py  test_posts.py  test_routes_core.py  test_routes_writing.py
(+28 files in other folders)
