[project]
name = "ctwarrick-dev"
version = "0.1.0"
description = "Public personal website for Chris Warrick — Flask/Jinja authored, frozen to static HTML"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "frozen-flask",
    "markdown",
    "pygments",
    "python-frontmatter",
    "pytest",
    "beautifulsoup4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
